# fenicsx-plotly

./: .bumpversion.cfg  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  _config.yml  _toc.yml  pyproject.toml
.github/workflows/: test_package_coverage.yml
demo/: unit_cube.ipynb  unit_square.ipynb
docker/: Dockerfile
docs/: api.rst  refs.bib
src/fenicsx_plotly/: __init__.py  _fenicsx_plotly.py
tests/: test_fenicsx_plotly.py
